--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -21,7 +21,7 @@
     <!-- Custom CSS -->
     <link
       rel="stylesheet"
-      href="{{ url_for('static', filename='styles/cv.css', v='1.3') }}"
+      href="{{ url_for('static', filename='styles/cv.css', v='1.5') }}"
     />
 
     {% block css %}{% endblock %}
@@ -172,6 +172,13 @@
 
     {% include 'default/footer.html' %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-    {% block js %}{% endblock %}
+    {% block js %}
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+    <script
+      id="MathJax-script"
+      async
+      src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"
+    ></script>
+    {% endblock %}
   </body>
 </html>
