--- a/app/static/styles/cv.css
+++ b/app/static/styles/cv.css
@@ -68,3 +68,68 @@ nav[role="navigation"] a:hover {
 #tutorial-intro {
   text-align: center;
 }
+
+/* Carousel Controls */
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
+  filter: drop-shadow(2px 2px 2px black);
+}
+
+/* Carousel Image */
+.carousel-image {
+  max-height: 400px;
+  width: 60%; /* Image takes up 60% of the width */
+  float: left; /* Image positioned to the left */
+  object-fit: cover;
+}
+
+/* Carousel Caption */
+.carousel-caption {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 60%; /* Starting from where the image ends */
+  width: 40%; /* The caption occupies the remaining 40% */
+  background-color: rgba(0, 0, 0, 0.8); /* Increased opacity for better readability */
+  padding: 10px;
+  border-radius: 0;
+  text-align: left; /* Align text to the left */
+}
+
+/* For desktops and larger screens */
+.carousel-inner {
+  height: 30vw;
+}
+
+/* For tablets */
+@media (max-width: 768px) {
+  .carousel-inner {
+    height: 50vw;
+  }
+}
+
+/* For mobile devices */
+@media (max-width: 480px) {
+  .carousel-inner {
+    height: 70vw;
+  }
+}
+
+.carousel-indicators li {
+  width: 0.3rem;
+  height: 0.6rem;
+  border-radius: 0.3rem;
+  margin-right: 0.3rem;
+  margin-left: 0.3rem;
+  background-color: rgba(255, 255, 255, 0.5);
+}
+
+.carousel-indicators .active {
+  background-color: white;
+}
+
+.card {
+  margin-bottom: 1rem;
+  background-color: black;
+}
