--- a/app/templates/default/navbar.html
+++ b/app/templates/default/navbar.html
@@ -29,6 +29,9 @@
       <a class="nav-link" href="{{ url_for('skill_routes.skills') }}"
         >Skills</a
       >
+      <a class="nav-link" href="{{ url_for('main_routes.resume') }}">Resume</a>
+
+
     </div>
     <!-- Center-aligned links -->
     <div class="navbar-nav mx-auto">
