--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -30,7 +30,11 @@
     <header class="container">
       {% include 'default/navbar.html' %}
     </header>
+    <main class="container">
+      {% block content %}
 
+      {% endblock %}
+    </main>
 
     {% include 'default/footer.html' %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
