--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,1 +1,44 @@
 {% extends "base.html" %}
+
+{% block title %}
+Shnarf
+{% endblock %}
+
+{% block css %}
+<!-- Additional CSS for landing page -->
+<style>
+	/* Additional styles for landing page */
+	#introduction {
+		background-color: #000000;
+		padding: 20px;
+		border-radius: 8px;
+	}
+</style>
+{% endblock %}
+
+{% block content %}
+<!-- Hero Section -->
+<header>
+	<h1>Mason Counts</h1>
+	<p>Data Engineer | Machine Learning Enthusiast | Neuroscience Aficionado</p>
+</header>
+
+<!-- About Section -->
+<section id="about">
+	<h2>About Me</h2>
+	<p>
+		Hello! I'm Mason, a data engineer with a passion for machine learning and neuroscience.
+	</p>
+</section>
+
+<section class="row">
+	<article class="col-md-12">
+		<div class="mt-4" id="introduction">
+			<h2>Welcome to Troll land</h2>
+			<p>
+				shnarf
+			</p>
+		</div>
+	</article>
+</section>
+{% endblock %}
