--- a/app/templates/default/navbar.html
+++ b/app/templates/default/navbar.html
@@ -29,7 +29,7 @@
       <a class="nav-link" href="{{ url_for('skill_routes.skills') }}"
         >Skills</a
       >
-      <a class="nav-link" href="{{ url_for('main_routes.resume') }}">Resume</a>
+      <a class="nav-link" href="{{ url_for('main_routes.resume') }}">CV (&Resume)</a>
 
 
     </div>
