--- a/app/templates/default/navbar.html
+++ b/app/templates/default/navbar.html
@@ -25,10 +25,9 @@
       <a class="nav-link" href="{{ url_for('main_routes.projects') }}"
         >Search</a
       >
+      <a class="nav-link" href="{{ url_for('main_routes.resume') }}">Resume</a>
       <a class="nav-link" href="{{ url_for('main_routes.about') }}">About</a>
-      <a class="nav-link" href="{{ url_for('skill_routes.skills') }}"
-        >Skills</a
-      >
+      <a class="nav-link" href="{{ url_for('skill_routes.skills') }}">Skills</a>
     </div>
     <!-- Center-aligned links -->
     <div class="navbar-nav mx-auto">
