--- a/app/templates/account.html
+++ b/app/templates/account.html
@@ -19,7 +19,7 @@ block content %}
     </div>
     <div class="mt-4" id="change_password">
       <h2>Change Password</h2>
-      <form action="{{ url_for('auth_routes.signout') }}" method="post">
+      <form action="{{ url_for('auth_routes.change_password') }}" method="post">
         <div class="mb-3">
           <label for="current_password" class="form-label"
             >Current Password</label
