--- a/app/templates/default/footer.html
+++ b/app/templates/default/footer.html
@@ -20,13 +20,13 @@
         <h5 class="text-uppercase fw-bold">Contact</h5>
         <ul class="list-unstyled">
           <li><span class="info-label"><i class="fas fa-envelope"></i> Email:</span> <a
-              href="mailto:.com">.com</a></li>
+              href="mailto:mlc9181209@gmail.com">mlc9181209@gmail.com</a></li>
           <li><span class="info-label"><i class="fas fa-globe"></i> Website:</span> <a
-              href="https://.com">.com</a></li>
+              href="https://masoncounts.com">masoncounts.com</a></li>
           <li><span class="info-label"><i class="fab fa-github"></i> GitHub:</span> <a
-              href="https://github.com/">github.com/</a></li>
+              href="https://github.com/spindouken">github.com/spindouken</a></li>
           <li><span class="info-label"><i class="fab fa-linkedin"></i> LinkedIn:</span> <a
-              href="https://www.linkedin.com/in//">linkedin.com/in//</a></li>
+              href="https://www.linkedin.com/in/masoncounts/">linkedin.com/in/masoncounts/</a></li>
         </ul>
       </address>
     </div>
