--- a/app/templates/resume.html
+++ b/app/templates/resume.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<html>
+{% extends "base.html" %}
 
 <head>
 	<!-- Title -->
@@ -9,7 +8,7 @@
 	{% include 'default/meta.html' %}
 
 	<!-- Favicon -->
-	<link rel="icon" href="{{ url_for('static', filename='images/favicon.ico') }}" type="image/x-icon" />
+	<link rel="icon" href="{{ url_for('static', filename='images/favicon.png') }}" type="image/x-icon" />
 
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" />
@@ -28,8 +27,8 @@
       {% block content %}
 			<section class="row align-items-center">
 				<div class="col-12">
-					<h1>Chris Stamper</h1>
-					<h2>Data Engineer, Software Engineer, Chemical Engineer</h2>
+					<h1>Mason Counts</h1>
+					<h2>Data Engineer, Silly Goose</h2>
 					<p class="fs-5">Location: Tulsa, Oklahoma, United States</p>
 				</div>
 			</section>
@@ -41,19 +40,19 @@
 							<ul class="list-unstyled">
 								<li>
 									<span class="info-label">Email:</span>
-									<a href="mailto:cstampok@gmail.com">cstampok@gmail.com</a>
+									<a href="mailto:cstampok@gmail.com">mlc9181209@gmail.com</a>
 								</li>
 								<li>
 									<span class="info-label">Website:</span>
-									<a href="https://zerodaypoke.com">zerodaypoke.com</a>
+									<a href="https://masoncounts.com">masoncounts.com</a>
 								</li>
 								<li>
 									<span class="info-label">GitHub:</span>
-									<a href="https://github.com/zerodaypoke">github.com/ZeroDayPoke</a>
+									<a href="https://github.com/spindouken">github.com/spindouken</a>
 								</li>
 								<li>
 									<span class="info-label">LinkedIn:</span>
-									<a href="https://www.linkedin.com/in/zerodaypoke/">linkedin.com/in/zerodaypoke/</a>
+									<a href="https://www.linkedin.com/in/masoncounts/">linkedin.com/in/masoncounts/</a>
 								</li>
 							</ul>
 						</address>
@@ -63,12 +62,14 @@
 					<div class="mb-4">
 						<h3>Objective</h3>
 						<p class="small">
-							I am a versatile and driven engineer seeking an exciting career
-							opportunity. While I have a particular interest in transitioning into a
-							machine learning role, I am also open to positions in various areas,
-							including full-stack development. I am eager to apply my technical
-							expertise and problem-solving skills to contribute to the success of
-							innovative projects and teams.
+              Machine learning engineer with 10 plus years of experience in tech marketing, real estate, and skilled trades. Gained a
+              unique global perspective from an International Business degree at OSU, complemented by a minor in Chinese Studies.
+              Acquired cultural fluency and market insights through a study abroad program in Shanghai, China. Built a robust skill
+              set in C and Python, mastering various data analytics tools with a specialization in machine learning and data
+              engineering. Proficient in the complexities of neural networks, fortified by a deep understanding of the underlying
+              mathematics and statistics. Utilizes strong communication skills, honed from years in customer-facing roles, to
+              effectively translate complex technical concepts into accessible language. Driven to merge a deep-rooted enthusiasm for
+              technology and science into a transformative and intellectually stimulating career in machine learning.
 						</p>
 					</div>
 				</div>
