--- a/app/templates/default/navbar.html
+++ b/app/templates/default/navbar.html
@@ -1,8 +1,8 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
   <a class="navbar-brand" href="#">
     <img
-      src="{{ url_for('static', filename='images/favicon.ico') }}"
-      alt="Chris Stamper - CV"
+      src="{{ url_for('static', filename='images/favicon.png') }}"
+      alt="Mason Counts - CV"
       width="auto"
       height="30"
     />
