--- a/app/templates/projects.html
+++ b/app/templates/projects.html
@@ -1,37 +1,84 @@
 {% extends 'base.html' %} {% block content %}
-<form method="POST">
-  {{ form.hidden_tag() }} {{ form.skills.label }} {{ form.skills }} {{
-  form.filter }}
-</form>
-<section class="row">
-  {% for project in projects %}
-  <div class="col-md-6 col-lg-4">
-    <div class="card project-card mb-4 bg-dark text-light" id="{{ project.id }}">
-      <div class="card-body">
-        <h3 class="card-title">
-          {% if project.repo_link %}
-          <a href="{{ project.repo_link }}">{{ project.name }}</a>
-          {% else %} {{ project.name }} {% endif %}
-        </h3>
-        <p class="card-text">{{ project.description }}</p>
-        <p class="card-text"><b>Role:</b> {{ project.role }}</p>
-        {% if project.live_link %}
-        <p>Live Project At:</p>
-        <a href="{{ project.live_link }}">{{ project.live_link }}</a>
-        {% endif %}
-        <ul>
-          <li>
-            <b>Related Skills:</b>
+<div class="row">
+  <!-- Filter Section -->
+  <div class="col-md-3">
+    <form method="POST">
+      {{ form.hidden_tag() }}
+      <div class="mb-3">{{ form.skills.label }} {{ form.skills }}</div>
+      {{ form.filter }}
+    </form>
+  </div>
+
+  <!-- Carousel Section -->
+  <div class="col-md-9">
+    <div id="projectCarousel" class="carousel slide" data-bs-ride="carousel">
+      <!-- Carousel Indicators -->
+      <ol class="carousel-indicators">
+        {% for project in projects %}
+        <li
+          data-bs-target="#projectCarousel"
+          data-bs-slide-to="{{ loop.index0 }}"
+          {%
+          if
+          loop.first
+          %}class="active"
+          {%
+          endif
+          %}
+        ></li>
+        {% endfor %}
+      </ol>
+
+      <!-- Carousel Slides -->
+      <div class="carousel-inner">
+        {% for project in projects %}
+        <div class="carousel-item {% if loop.first %}active{% endif %}">
+          <div
+            class="carousel-caption d-flex flex-column align-items-center justify-content-end"
+          >
+            <h5>
+              {% if project.repo_link %}
+              <a href="{{ project.repo_link }}">{{ project.name }}</a>
+              {% else %} {{ project.name }} {% endif %}
+            </h5>
+            <p>{{ project.description }}</p>
+            <p><b>Role:</b> {{ project.role }}</p>
+            {% if project.live_link %}
+            <p><a href="{{ project.live_link }}">Live Project</a></p>
+            {% endif %}
             <ul>
-              {% for skill in project.related_skills %}
-              <li>{{ skill.name }}</li>
-              {% endfor %}
+              <b>Related Skills:</b>
+              <ul>
+                {% for skill in project.related_skills %}
+                <li>{{ skill.name }}</li>
+                {% endfor %}
+              </ul>
             </ul>
-          </li>
-        </ul>
+          </div>
+        </div>
+        {% endfor %}
       </div>
+
+      <!-- Carousel Controls -->
+      <a
+        class="carousel-control-prev"
+        href="#projectCarousel"
+        role="button"
+        data-bs-slide="prev"
+      >
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a
+        class="carousel-control-next"
+        href="#projectCarousel"
+        role="button"
+        data-bs-slide="next"
+      >
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
     </div>
   </div>
-  {% endfor %}
-</section>
+</div>
 {% endblock %}
