--- a/app/templates/skills.html
+++ b/app/templates/skills.html
@@ -1,97 +1,71 @@
-{% extends 'base.html' %} {% block content %}
-<div class="row">
-  <!-- Filter Section -->
-  <div class="col-md-3">
-    <form method="POST">
-      {{ form.hidden_tag() }}
-      <div class="mb-3">{{ form.skills.label }} {{ form.skills }}</div>
-      {{ form.filter }}
-    </form>
-  </div>
+{% extends "base.html" %} {% block title %}Skills{% endblock %} {% block content
+%}
 
-  <!-- Carousel Section -->
-  <div class="col-md-9">
-    <div id="projectCarousel" class="carousel slide" data-bs-ride="carousel">
-      <!-- Carousel Indicators -->
-      <ol class="carousel-indicators">
-        {% for project in projects %}
-        <li
-          data-bs-target="#projectCarousel"
-          data-bs-slide-to="{{ loop.index0 }}"
-          {%
-          if
-          loop.first
-          %}class="active"
-          {%
-          endif
-          %}
-        ></li>
-        {% endfor %}
-      </ol>
+<div id="skillCarousel" class="carousel slide" data-bs-ride="carousel">
+  <!-- Carousel Indicators -->
+  <ol class="carousel-indicators">
+    {% for skill in skills %}
+    <li
+      data-bs-target="#skillCarousel"
+      data-bs-slide-to="{{ loop.index0 }}"
+      {%
+      if
+      loop.first
+      %}class="active"
+      {%
+      endif
+      %}
+    ></li>
+    {% endfor %}
+  </ol>
 
-      <!-- Carousel Slides -->
-      <div class="carousel-inner">
-        {% for project in projects %}
-        <div class="carousel-item {% if loop.first %}active{% endif %}">
-          {% if project.image_filename %}
-          <img
-            src="{{ url_for('static', filename='images/projects/' + project.image_filename) }}"
-            alt="{{ project.name }} image"
-            class="d-block w-100 carousel-image img-fluid"
-          />
-          {% else %}
-          <img
-            src="{{ url_for('static', filename='images/defaults/notfound2.png') }}"
-            alt="Default project image"
-            class="d-block w-100 carousel-image img-fluid"
-          />
-          {% endif %}
-          <div
-            class="carousel-caption d-flex flex-column align-items-center justify-content-end"
-          >
-            <h5>
-              {% if project.repo_link %}
-              <a href="{{ project.repo_link }}">{{ project.name }}</a>
-              {% else %} {{ project.name }} {% endif %}
-            </h5>
-            <p>{{ project.description }}</p>
-            <p><b>Role:</b> {{ project.role }}</p>
-            {% if project.live_link %}
-            <p><a href="{{ project.live_link }}">Live Project</a></p>
-            {% endif %}
-            <ul>
-              <b>Related Skills:</b>
-              <ul>
-                {% for skill in project.related_skills %}
-                <li>{{ skill.name }}</li>
-                {% endfor %}
-              </ul>
-            </ul>
-          </div>
-        </div>
-        {% endfor %}
+  <!-- Carousel Slides -->
+  <div class="carousel-inner">
+    {% for skill in skills %}
+    <div class="carousel-item {% if loop.first %}active{% endif %}">
+      {% if skill.image_filename %}
+      <img
+        src="{{ url_for('static', filename='images/skills/' + skill.image_filename) }}"
+        alt="{{ skill.name }} icon"
+        class="d-block w-100 carousel-image img-fluid"
+      />
+      {% else %}
+      <img
+        src="{{ url_for('static', filename='images/defaults/notfound3.png') }}"
+        alt="Default skill icon"
+        class="d-block w-100 carousel-image img-fluid"
+      />
+      {% endif %}
+      <div
+        class="carousel-caption d-flex flex-column align-items-center justify-content-end"
+      >
+        <h5>{{ skill.name }}</h5>
+        <p>{{ skill.description|default('A valuable skill.') }}</p>
       </div>
-
-      <!-- Carousel Controls -->
-      <a
-        class="carousel-control-prev"
-        href="#projectCarousel"
-        role="button"
-        data-bs-slide="prev"
-      >
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a
-        class="carousel-control-next"
-        href="#projectCarousel"
-        role="button"
-        data-bs-slide="next"
-      >
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
     </div>
+    {% endfor %}
   </div>
+
+  <!-- Carousel Controls -->
+  <a
+    class="carousel-control-prev"
+    href="#skillCarousel"
+    role="button"
+    data-bs-slide="prev"
+    aria-label="Previous slide"
+  >
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a
+    class="carousel-control-next"
+    href="#skillCarousel"
+    role="button"
+    data-bs-slide="next"
+    aria-label="Next slide"
+  >
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
 </div>
 {% endblock %}
